Vue的组件系统

--- a/Vue源码/2.1-数据驱动-$mount.md
+++ b/Vue源码/2.1-数据驱动-$mount.md
@@ -29,11 +29,11 @@ function mountComponent (vm, el, hydrating) {
     vm.$options.render = createEmptyVNode
   }
   
-  // 触发 beforeMount 生命周期钩子
+  // 触发beforeMount生命周期钩子
   callHook(vm, 'beforeMount')
 
-  // vm._render：调用render方法并返回生成的vnode template -> render -> vnode
-  // vm._update：将_render生成的vnode渲染成真正的DOM，vnode -> DOM
+  // vm._render：render(createElement)生成vnode： template -> render -> vnode
+  // vm._update：将vnode渲染成真正的DOM，vnode -> DOM
   const updateComponent = () => {
     vm._update(vm._render(), hydrating)
   }
