--- a/Vue源码/2.2-数据驱动-vnode和render.md
+++ b/Vue源码/2.2-数据驱动-vnode和render.md
@@ -40,7 +40,7 @@ Vue.prototype._render = function () {
   const vm = this
   const { render, _parentVnode } = vm.$options
 
-  // 用实例的$vnode记录父vnode
+  // 用实例的$vnode记录父vnode，对于根实例vm.$options，_parentVnode为空
   vm.$vnode = _parentVnode
   let vnode = render.call(vm._renderProxy, vm.$createElement)
 
@@ -64,9 +64,9 @@ let vnode = render.call(vm._renderProxy, vm.$createElement)
 至于`vm.$createElement`，将它与官方文档中介绍的通过渲染函数创建Vue实例所提到的`createElement`相比较：
 ![render](https://pic.downk.cc/item/5f549704160a154a670e7a4e.jpg)
 
-可以发现这里的`render`方法的`createElement`参数对应的正是这里的`vm.$createElement`方法。
+可以发现这里的`render`方法的参数`createElement`对应的正是这里的`$createElement`。
 
-`vm.$createElement`是在Vue实例初始化阶段（`_init(vm)`）通过`initRender(vm)`定义在Vue实例上的：
+而`$createElement`是在Vue实例初始化阶段（`_init(vm)`）通过`initRender(vm)`定义在Vue实例上的：
 ```js
 // src/core/instance/render.js
 import { createElement } from '../vdom/create-element'
@@ -77,7 +77,7 @@ function initRender (vm) {
 }
 ```
 
-可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个方法是在`render`方法来自模板编译case使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`：
+接着来看`createElement`：
 ```js
 // src/core/vdom/create-element
 function createElement (context, tag, data, children, normalizationType, alwaysNormalize) {
@@ -95,7 +95,7 @@ function createElement (context, tag, data, children, normalizationType, alwaysN
 
 > 当data为Array或基本数据类型时处理为children，主要是针对通过手写渲染函数创建Vue实例时不提供data的场景：render: h => h('div', 123)，认为无data
 
-可以看到`createElement`只是做了一层封装，本质还是对`_createElement`的调用：
+`createElement`只是做了一层封装，本质上又是对`_createElement`的调用：
 ```js
 // src/core/vdom/create-element
 function _createElement (context, tag, data, children, normalizationType) {
@@ -123,9 +123,9 @@ function _createElement (context, tag, data, children, normalizationType) {
 }
 ```
 
-`_createElement`是真正用于创建vnode的方法，它接收了几个描述vnode信息的参数，并在创建vnode之前先做了`children`的规范化处理。
+`_createElement`是真正用于创建vnode的方法，它接收了几个描述vnode信息的参数，可以看到在创建vnode之前这里还有对`children`的规范化处理。
 
-#### 2.1 children规范化
+##### 2.1 children规范化
 `_createElement`方法接收的参数`children`可能是任意类型的，因此需要先将它们规范成`VNode`类型：
 ```js
 if (normalizationType === ALWAYS_NORMALIZE) {
@@ -216,7 +216,7 @@ function normalizeArrayChildren (children, nestedIndex) {
 
 可以看到，`"嘿嘿"`和`"第二个"`两个文本节点被合并为一个vnode。总之，经过对`children`的规划化处理之后，`children`的每一项都为`VNode`类型对象。
 
-#### 2.2 vnode的创建
+##### 2.2 vnode的创建
 回到`_createElement`方法中，在对`children`做规范化处理之后，接下来的工作就是最关键的创建vnode：
 ```js
 let vnode
