--- a/Vue源码/2.3-数据驱动-update.md
+++ b/Vue源码/2.3-数据驱动-update.md
@@ -157,7 +157,7 @@ createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps
 function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerArray, index) {
   vnode.isRootInsert = !nested
 
-  // createComponent方法用于尝试以组件方式update，如果可以则DOM处理完毕
+  // 以组件方式做patch，如果可以则DOM处理完毕
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
   const data = vnode.data
