--- a/Vue源码/3.1-组件化-组件vnode的创建.md
+++ b/Vue源码/3.1-组件化-组件vnode的创建.md
@@ -1,4 +1,4 @@
-在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们分析Vue的组件。
+在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们分析Vue的组件系统。
 
 我们之前讨论过vnode的创建，`_createElement`方法中有这样一段逻辑：
 ```js
@@ -25,21 +25,60 @@ function _createElement (context, tag, data, children, normalizationType) {
 }
 ```
 
-Vue允许我们将组件作为参数传给`_createElement`，比如：
+Vue允许我们使用组件作为模板去渲染，所以**如果我们使用组件作为模板**（描述vnode）：
 ```js
+// main.js
 import Vue from 'vue'
 import App from './App.vue'
 
 const vm = new Vue({
-  el: '#app',
-  render: h => h(App)
+  render: h => h(App, {
+    propsData: {
+      canshu: '参数可以propsData传递'
+    }
+  }),
+  data () {
+    return {
+      name: '根Vue实例的data: name'
+    }
+  },
+  created () {
+    console.log('根实例提供created方法吗？')
+  },
+  methods: {
+    hi () {
+      console.log('hi')
+    }
+  }
 })
+
+// App.vue
+<template>
+  <div>
+    <div class="box">{{message}}</div>
+  </div>
+</template>
+
+<script>
+export default {
+  name: 'app组件名',
+  data () {
+    return {
+      message: '来自App组件的data'
+    }
+  },
+  mounted () {
+    console.log('在App组件的mounted钩子上注册回调')
+  },
+}
+</script>
+</script>
 ```
 
-`vm._createElement`接收的参数`tag`在这里对应的是一个JavaScript对象，它代表一个组件：
-![App](https://pic.downk.cc/item/5f57ac87160a154a67bb9b49.jpg)
+那么对应到`vm._createElement`的参数`tag`显然是一个JavaScript对象，它代表一个组件：
+![App](https://img.imgdb.cn/item/604794745aedab222ccf9e5e.jpg)
 
-所以`vm._createElement`的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
+所以根实例创建vnode的逻辑会走到`createComponent(tag, data, context, children)`中去，**它会创建一个组件类型的vnode**（这意味着使用组件作为模板的实例的vnode是一个组件类型的vnode）：
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
@@ -55,6 +94,7 @@ function createComponent (Ctor, data, context, children, tag) {
     if (Ctor === undefined) return createAsyncPlaceholder(asyncFactory, data, context, children, tag)
   }
 
+  // 如果render没有为创建vnode提供data参数，则初始化为空对象
   data = data || {}
 
   if (isDef(data.model)) transformModel(Ctor.options, data)
@@ -80,28 +120,21 @@ function createComponent (Ctor, data, context, children, tag) {
 
 在这里，我们更关心这三处核心逻辑：
 - 构建组件类
-- 安装组件钩子函数
-- 创建组件`vnode`
+- 安装vnode钩子函数
+- 创建`vnode`
 
 ### 1. 构建组件类（构造函数）
-这是一个比较有意思的地方，为什么要构建组件类？回到`_createElement`中来：
-```js
-const vm = new Vue({
-  el: '#app',
-  render: h => h(App)
-})
-```
+这是一个比较有意思的地方，为什么要构建组件类——在紧接着的下一小节讨论根实例的`patch`中我们会知道，对于组件类型的vnode，Vue的设计是将其`patch`交给了它的子组件实例去做。子组件实例也是Vue实例（组件实例），它的生成也依赖与`Vue`结构一样的构造函数，所以创建组件类型的vnode前需要构建组件类。
 
-这里我们提供了一个组件`App`作为`_createElement`的参数，`App`描述了`vm`对应的vnode结构，`vm`的vnode转换为DOM依赖`vm._update`。那么组件`App`的vnode呢？同样的，它也是通过`App`组件实例的`_update`方法转为DOM，所以在这里需要做的事情是先创建`App`组件实例。而考虑到系统内组件的复用，会以组件类的形式去创建组件实例。
-
-组件类是通过`baseCtor.extend(Ctor)`创建的：
+组件类（构造函数）是通过`baseCtor.extend(Ctor)`创建的：
 ```js
+// 实例的构造函数
 const baseCtor = context.$options._base
 
 if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 ```
 
-对于上文提到根实例`vm`，`context.$options._base`自然指向了`Vue`。先来看`Vue.extend`（下面会看到所有组件类的`baseCtor.extend`方法都是对`Vue.extend`的拷贝）：
+对于上文提到根实例`vm`，`context.$options._base`自然指向了`Vue`。先来看`Vue.extend`：
 ```js
 // src/core/global-api/extend.js
 Vue.cid = 0
@@ -164,12 +197,15 @@ Vue.extend = function (extendOptions) {
 }
 ```
 
-可以看到，通过`Vue.extend`创建的组件类上保留了许多`Vue`的静态方法的拷贝，包括`Vue.extend`方法本身，它最终返回一个构造函数作为组件类。
+可以看到，通过`Vue.extend`创建的组件类`Sub`上保留了许多对`Vue`的静态方法的拷贝，包括`Vue.extend`方法本身。
 
-组件类构造好了在何时调用？当然是在创建组件实例时，对组件实例的创建的讨论放在下一节。
+对于上面的`App`组件，其对应的组件类`Ctor`如下：
+![Ctor](https://img.imgdb.cn/item/604796555aedab222cd0bc19.jpg)
+
+`Ctor.superOptions`维护了对其父实例组件类`options`（`Vue.options`）的引用。
 
 ### 2. installComponentHooks
-组件类构件完毕后，下一步的工作是安装钩子。需要注意的是，这里的钩子指的是组件vnode上的钩子，而不是组件实例本身的生命周期钩子（组件实例此时还没有创建）：
+组件类构件完毕后，下一步的工作是安装钩子。需要注意的是，这里的钩子指的是**vnode上的钩子**，而不是组件实例的生命周期钩子。当然，**此时vnode还没有创建，所以这里暂时先将钩子维护在用于创建vnode的data参数上**：
 ```js
 const componentVNodeHooks = {
   init (vnode, hydrating) {
@@ -184,12 +220,8 @@ const componentVNodeHooks = {
       child.$mount(hydrating ? vnode.elm : undefined, hydrating)
     }
   },
-
-  // keepAlive组件patch时触发
-  prepatch (oldVnode, vnode) },
-
+  prepatch (oldVnode, vnode) {},
   insert (vnode) {},
-
   destroy (vnode) {}
 }
 
@@ -209,10 +241,10 @@ function installComponentHooks (data) {
 }
 ```
 
-`installComponentHooks`的过程就是把`init`、`prepatch`、`inserted`和`destroy`几个钩子合并到组件vnode的`data.hook`中，这些钩子将在组件实例的`patch`阶段被调用，具体的钩子的逻辑后续再做讨论。
+`installComponentHooks`的过程就是把`init`、`prepatch`、`inserted`和`destroy`几个钩子合并到`data.hooks`中，这些钩子将在vnode的`patch`阶段被调用，具体的钩子会在下一小节讨论。
 
-### 3. 创建组件vnode
-组件vnode上的钩子处理完后，最后一步就是通过`VNode`实例化vnode：
+### 3. 创建vnode
+组件类`Ctor`以及`data.hooks`处理完后，它们均作为参数参与了实例化vnode的过程：
 ```js
 var vnode = new VNode(
   ("vue-component-" + (Ctor.cid) + (name ? ("-" + name) : '')),
@@ -222,16 +254,14 @@ var vnode = new VNode(
 )
 ```
 
-**在此之前构造的组件类构造函数Ctor以及钩子函数均被记录进了最终生成的组件vnode中**。
+在这里可以看到，**之前构造的组件类构造函数Ctor以及维护了钩子函数的data均被记录进了最终生成的vnode中**。
 
-要注意的是与普通元素节点vnode不同，**组件vnode是没有children的**，这一点很关键。
+与普通元素节点vnode不同，**组件vnode是没有children的**，这一点很关键。
 
 ### 总结
 `createComponent`生成一个组件vnode涉及了3个关键操作：
 - 构造组件类
-- 安装组件vnode钩子函数
+- 在`data.hooks`上安装钩子函数
 - 实例化vnode
 
-与普通元素节点的vnode一样，组件vnode创建完后也会走到`patch`更新与之相对应的DOM逻辑中去，`patch`方法中关于组件的逻辑会在下一小节中讨论。
-
-另外，**组件vnode创建完毕时，组件实例还未创建**，组件vnode上记录了组件类构造函数，这个构造函数何时被调用，这个问题还要在下一节做解答。
+与普通元素节点的vnode一样，组件vnode创建完后也会走到`patch`更新与之相对应的DOM流程中去，这部分会在下一小节中讨论。
