--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -1,5 +1,4 @@
-本节讨论组件vnode的`patch`。
-
+<!-- 本节讨论组件类型的vnode的`patch`。 -->
 回顾`2.3`小节，vnode到DOM的实现借助了`createElm`方法：
 ```js
 function createElm (
@@ -11,7 +10,7 @@ function createElm (
   ownerArray,
   index
 ) {
-  // 尝试以组件vnode处理
+  // 尝试以组件vnode做patch
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
   // 非组件vnode的逻辑
@@ -38,13 +37,13 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 }
 ```
 
-在前一节中已经提到，组件vnode的创建前有钩子函数的安装步骤，所以对于组件vnode其`data.hook.init`一定存在。所以组件vnode的`patch`，会经历以下三步：
-1. 执行组件vnode的`init`钩子函数
+在上一小节给出的根实例是以组件作为渲染模板的，它的vnode正是组件类型的vnode，而且我们已经分析过这个vnode在创建前有安装钩子函数的工作。结合此处`patch`的逻辑，可以发现组件类型的vnode的`patch`工作，交给了`createComponent`接管：
+1. 执行`vnode.data.hooks`的`init`钩子函数
 2. `initComponent`
 3. `insert`
 
 ### 1. init钩子
-现在可以来看看`init`钩子做了哪些事情了：
+现在先来看`init`钩子做了哪些事情了：
 ```js 
 function init (vnode, hydrating) {
   if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
@@ -61,7 +60,8 @@ function init (vnode, hydrating) {
 }
 ```
 
-暂不考虑`keepAlive`的情况，这里会先通过`createComponentInstanceForVnode`创建**子组件实例**，前一节我们讨论的创建组件vnode前构造的组件类构造函数，在这里登场了：
+暂不考虑`keepAlive`的情况，这里会先通过`createComponentInstanceForVnode`创建**子组件实例**，前一节我们讨论的构造的组件类构造函数，在这里登场了：
+
 ##### 1.1 createComponentInstanceForVnode创建子组件实例
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
@@ -80,22 +80,19 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-对于：
-```js
-const vm = new Vue({
-  el: '#app',
-  render: h => h(App)
-})
-```
-
-创建子组件`App`实例（记为`child`）的参数：
+创建子组件实例（记为`child`）的参数：
 - `_isComponent`为`true`，区别于普通Vue实例
 - `_parentVnode`维护了对父实例vnode的引用，即`options._parentVnode = vnode`
 - `parent`维护了对父实例的引用，即`options.parent = vm`
   
-子组件实例`child`创建完成后，父实例的vnode通过`componentInstance`维护了对`child`的引用——`vnode.componentInstance = child`。
+子组件实例`child`创建完成后：
+```js
+vnode.componentInstance = child
+```
 
-下面我们来看刚刚构造的参数在实例化`child`过程中是如何作用的：
+使得父实例的vnode通过`componentInstance`也维护了对`child`的引用。
+
+下面我们来看刚刚构造的维护父子关系的参数在实例化`child`过程中都有什么作用：
 ```js
 Vue.prototype._init = function (options) {
   const vm = this
@@ -118,7 +115,7 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-`options._isComponent`为`true`，所以`child.$options`的合并是由`initInternalComponent`完成的：
+最开始的这段逻辑是初始化实例的`$options`属性，由于`options._isComponent`为`true`，会进入`initInternalComponent`中：
 ```js
 function initInternalComponent (vm, options) {
   // 子组件实例的$options合并
@@ -140,13 +137,10 @@ function initInternalComponent (vm, options) {
 }
 ```
 
-`opts`为对`child.$options`的引用，对其进行写操作导致：
-- `child.$options.parent = options.parent`
-- `child.$options._parentVnode = options._parentVnode`
+可以看到，子组件实例`child.$options`上保留了对父组件实例`vm`以及`vm`对应的vnode的引用，这些引用的作用后面再做讨论，子组件实例最终如下：
+![child](https://img.imgdb.cn/item/6047b7295aedab222ce354c4.jpg)
 
-子组件实例`child.$options`上保留了对父组件实例`vm`以及`vm`对应的vnode的引用。这些引用的作用后面再做讨论。
-
-最后，由于初始化子组件实例`child`是不传`el`参数的：
+最后，由于初始化子组件实例`child`是没有传`el`参数的：
 ```js
 Vue.prototype._init = function (options) {
   const vm = this
@@ -160,17 +154,30 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-所以`child.$mount`不是在`child._init`中调用的，它被放在了
+所以`child.$mount`不是在`child._init`中调用的，回到`vnode.data.hooks.init`钩子函数中：
+```js
+function init () {
+  const child
+    = vnode.componentInstance
+    = createComponentInstanceForVnode(vnode, activeInstance)
+  
+  child.$mount(hydrating ? vnode.elm : undefined, hydrating)
+}
+```
 
-##### 1.2 挂载组件实例
-回到`init`钩子中，子组件实例`ch`创建后，通过`ch.$mount`挂载。子组件的`_render`：
+子组件实例`child`创建完成之后最终还是发起了`child.$mount`的调用（而不是像普通实例那样在`_init`内部），至此我们理解了为什么说根实例vnode的`patch`是交给子组件实例去完成的。
+
+##### 1.2 子组件实例$mount
+`child.$mount`的流程就再次回到在`2.1`小节讨论过的`mountComponent(vm, el)`中，不过这次我们来看看子组件实例的`$mount`与其父实例（在上文给出的例子中也就是根实例）的`$mount`有何不同。
+
+首先是创建`child`的vnode：
 ```js
 Vue.prototype._render = function () {
   const vm = this
   const { render, _parentVnode } = vm.$options
 
-  // _parentVnode为父vnode
   vm.$vnode = _parentVnode
+
   let vnode = render.call(vm._renderProxy, vm.$createElement)
 
   if (Array.isArray(vnode) && vnode.length === 1) vnode = vnode[0]
@@ -180,15 +187,21 @@ Vue.prototype._render = function () {
 }
 ```
 
-在生成子组件vnode时，子组件实例的`$vnode`保留了对父vnode的引用，生成的子组件实例对应的vnode的`parent`同样指向了父vnode，而在`_update`时：
+前文已经提到，`child.$options._parentVnode`保留了对父实例vnode的引用，所以对于创建的**子组件实例ch及其vnode**，有：
+- **ch.$vnode维护了对父实例的vnode的引用**
+- **vnode.parent维护了对父实例的vnode的引用**
+
+这两点是区别于之前所提到的父实例的vnode的，因为在当前场景下其父实例是根实例，`vm.$options._parentVnode`不存在。另外，**子组件实例的vnode可能是组件类型vnode，也可能不是组件类型vnode**，这取决于子组件实例的`render`——`child.$options.render`，这一点很重要。
+
+紧接着就是`child`的`_update`：
 ```js
 let activeInstance = null
 
 function setActiveInstance(vm) {
-  // 记录之前的激活的Vue实例
+  // 记录之前active状态的Vue实例
   const prevActiveInstance = activeInstance
   activeInstance = vm
-  // 返回的方法用于重置激活的Vue实例
+  // 返回一个方法，用于重置处于active状态的Vue实例
   return () => {
     activeInstance = prevActiveInstance
   }
@@ -200,7 +213,7 @@ Vue.prototype._update = function (vnode, hydrating) {
   const prevVnode = vm._vnode
   // 将activeInstance指向当前执行_update操作的Vue实例
   const restoreActiveInstance = setActiveInstance(vm)
-  // 将实例对应的vnode记录在vm._vnode上
+  // 将子组件实例vnode记录在实例的_vnode上
   vm._vnode = vnode
   if (!prevVnode) {
     // 新建
@@ -221,9 +234,9 @@ Vue.prototype._update = function (vnode, hydrating) {
 }
 ```
 
-`vnode`是由子组件实例`ch._render`生成的，`vm._vnode = vnode`使得子组件实例的`_vnode`属性指向了`vnode`，所以有`ch._vnode.parent === ch.$vnode`，子组件实例的`$vnode`和`_vnode`相当于是父子关系。
+`vm._vnode = vnode`**使得子组件实例的_vnode记录了其对应的vnode**，结合前文我们知道`ch._vnode.parent === ch.$vnode`成立，子组件实例的`$vnode`（父）和`_vnode`（子）相当于是父子关系。
 
-`activeInstance`是一个全局变量，用于保持对当前Vue实例的引用——Vue的实例化是一个深度优先的遍历过程，在实例化子组件时需要知道当前上下文Vue实例是什么。在上面子组件的实例化过程已经提到过，`ch._init`方法会先走到`initInternalComponent`流程中去——将父vnode和父组件实例合并到子组件实例的`$options`中。紧接着的`initLifecycle(vm)`：
+`activeInstance`是一个全局变量，用于保持对当前Vue实例的引用——Vue的实例化（实例化还是patch？？）是一个深度优先的遍历过程，在实例化子组件时需要知道当前上下文Vue实例是什么。在上面子组件的实例化过程已经提到过，`ch._init`方法会先走到`initInternalComponent`流程中去——将父vnode和父组件实例合并到子组件实例的`$options`中。紧接着的`initLifecycle(vm)`：
 ```js
 function initLifecycle (vm) {
   const options = vm.$options
@@ -243,7 +256,7 @@ function initLifecycle (vm) {
 }
 ```
 
-可以看到，实例的`$parent`指向了父实例，`parent.$children.push(vm)`将当前实例推入父实例的`$children`数组中。
+可以看到，**实例的parent指向了父实例**，`parent.$children.push(vm)`将当前实例推入父实例的`$children`数组中。
 
 在实例的`_update`过程中，`activeInstance`指向了当前实例，在当前实例的`__patch__`完成后，`activeInstance`重新指向它的父实例，这样保证了`createComponentInstanceForVnode`的遍历是深度优先的。
 
@@ -270,33 +283,14 @@ function patch (oldVnode, vnode, hydrating, removeOnly) {
 }
 ```
 
-这里又回到了本节开始的地方`createElm`：
-```js
-function createElm (
-  vnode,
-  insertedVnodeQueue,
-  parentElm,
-  refElm,
-  nested,
-  ownerArray,
-  index
-) {
-  // 组件vnode创建子组件实例，通过子组件实例$mount实现组件的update
-  if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) {
-    return
-  }
-
-  // 非组件vnode的处理流程
-  const data = vnode.data
-  const children = vnode.children
-  // ...
-}
-```
-
-而这一次我们传入的vnode是子组件vnode，如果最初组件的根节点是个普通元素，那么此时的子组件vnode也是普通的vnode，`createComponent`的返回值是`false`，接下来的过程就和之前普通vnode的`update`一样了——先创建一个父节点占位符，然后再遍历所有子vnode递归调用`createElm`。在遍历的过程中，如果遇到子vnode是一个组件类型的vnode，则又会进入本节介绍的组件update的流程。如此一来，通过递归的方式便可以完整地构建出整个组件DOM。
+这里又回到了本节开始的地方`createElm`，所以接下来的过程就和开头一样了，但是要注意的是——前面已经提到了，**子组件实例的vnode可能是组件类型vnode也可能是普通vnode**，这取决于子组件实例的渲染方式，也就是`child.$options.render`。
+1. 如果是组件类型vnode，`child`的vnode的`patch`同样会再交给`child`的子组件实例去做
+2. 如果是普通vnode，则创建一个父节点占位符，遍历`vnode.children`（前文我们也提到过组件类型的vnode是没有children的）中的子vnode调用`createElm`。在遍历的过程中，如果碰到某个vnode又是组件类型的vnode，则会继续重复这一步。
+ 
+如此一来，通过遍历+递归的方式便可以完整地构建出完整的DOM，这就是Vue的组件系统的实现。
 
 ### 2. 组件的initComponent和insert
-回到组件的`createComponent`中，在组件的`init`钩子执行完后，会有一个子组件实例生成并被挂到`vnode.componentInstance`上，在子组件实例`vnode.componentInstance.$mount`执行之后：
+开头我们提到，所有类型的vnode最初都会进入`createComponent`尝试以组件类型vnode做`patch`，但是对于普通vnode，其`init`钩子不存在也不会创建`vnode.componentInstance`，所以会跳出以下逻辑：
 ```js
 if (isDef(vnode.componentInstance)) {
   initComponent(vnode, insertedVnodeQueue)
@@ -304,11 +298,12 @@ if (isDef(vnode.componentInstance)) {
   if (isTrue(isReactivated)) {
     reactivateComponent(vnode, insertedVnodeQueue, parentElm, refElm)
   }
+
   return true
 }
 ```
 
-通过`insert`完成组件对应的DOM的插入。
+这部分`insert`的逻辑在普通vnode中同样存在，它的任务就是将vnode对应的DOM插入到其父vnode对应的DOM中去。
 
 ### 总结
-至此，一个组件vnode是如何创建、初始化、渲染的过程也就分析完了。在对组件化的实现有一个大概掌握后，接下来我们要来探究一下这其中的一些细节。
+至此，一个组件vnode是如何创建、渲染的过程也就分析完了。在对组件化的实现有一个大概掌握后，接下来我们要来探究一下这其中的一些细节。
