--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,13 +1,13 @@
-通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的实例，另一种是在组件vnode的`patch`过程中创建的子组件实例。
+通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局实例，另一种是在组件vnode的`patch`过程中创建的子组件实例。
 
-无论哪种方式创建Vue实例，都会调用实例的`_init(options)`方法，`_init`中首先有一段合并`options`的逻辑：
+无论哪种方式创建Vue实例，其实例化过程中都是通过`_init(options)`完成的，`_init`中首先有一段合并`options`的逻辑：
 ```js
 Vue.prototype._init = function (options) {
   if (options && options._isComponent) {
     // 组件实例
     initInternalComponent(vm, options)
   } else {
-    // 非组件实例（根实例？
+    // 非组件实例
     vm.$options = mergeOptions(
       resolveConstructorOptions(vm.constructor),
       options || {},
@@ -22,13 +22,13 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-这里是将创建实例时提供的参数`options`与实例的构造函数的静态属性`options`合并到实例的`$options`上去。
+这里要做的事情就是将：
+1. 创建实例提供的参数`options`
+2. 实例的构造函数的静态属性`options`
 
-<!-- 实例的构造函数的静态属性`options`是通过`resolveConstructorOptions(vm.constructor)`解析获取的，你可能会感到疑惑——实例的构造函数不就是Vue吗？那么对应的`options`不就是`Vue.options`吗？为什么还要去解析它？事实上，实例的构造函数并不一定是Vue，组件实例是通过组件构造函数创建的，不同的组件对应的构造你函数的`options`自然不同。 -->
+合并为实例的`$options`，`initInternalComponent`在前一小节已经讨论过了，现在我们来看非组件实例的`$mergeOptions`。
 
-<!-- 而根据实例的类型，`vm.$options`的合并处理又分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`的流程。 -->
-
-在分析合并方法`mergeOptions`之前，我们先看一看实例构造函数的静态属性`options`上都有什么。
+在这之前，我们先看一看实例的构造函数的静态属性`options`上都有什么。
 
 ### 1. Vue.options / VueComponent.options
 涉及`Vue.options`的写操作主要分散在两处。一个是在`initGlobalAPI(Vue)`中，它初始化了Vue的一系列静态属性和方法，其中就包含`Vue.options`：
@@ -71,10 +71,11 @@ extend(Vue.options.components, platformComponents)
 关于`builtInComponents`、`platformDirectives`、`platformComponents`的具体结构我们暂且放到一边，`Vue.options`最终长这个样子：
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
-对于组件构造函数，之前已经讲过，**组件的构造函数是在创建组件实例之前通过Ctor.extend(options)生成的**。相应的，组件构造函数的静态属性`options`也会继承父类的`Ctor.options`，所以`Vue.options`也会被继承。
+对于组件构造函数，之前已经讲过，**组件的构造函数是在创建子组件实例之前通过Ctor.extend(options)生成的**，对于前文给出的组件，其组件构造函数options：
+![Ctor.options](https://img.imgdb.cn/item/6047b9da5aedab222ce4283d.jpg)
 
 ### 2. resolveConstructorOptions
-`resolveConstructorOptions`方法用来解析构造函数的静态属性`options`：
+`resolveConstructorOptions`方法用来解析构造函数的options：
 ```js
 function resolveConstructorOptions (Ctor) {
   var options = Ctor.options
@@ -176,22 +177,14 @@ function mergeHook (parentVal, childVal) {
 }
 ```
 
-对于以下面这种方式创建Vue实例：
-```js
-new Vue({
-  el: '#app',
-  render: h => h(App),
-})
-```
-
-在经过一些列的options合并完之后，`vm.$options`被处理为：
+对于`3.1`小节给出的例子，根实例在经过options合并完之后，`vm.$options`被处理为：
 ![合并options之后的vm](https://img.imgdb.cn/item/60410c4f360785be5489cd14.jpg)
 
 `render`、`el`来自创建实例提供的参数，而`components`/`directives`/`filters`/`_base`等来自`Vue.options`。
 
 ### 总结
 这一小节分析了Vue实例初始化阶段的`options`的合并过程，合并的场景实际上有两种：
-- 子组件初始化时，通过`initInternalComponent`合并
+- 创建子组件实例，通过`initInternalComponent`合并
 - 手动调用构造函数`Vue`时，通过`mergeOptions`合并
 
-前者比后者更快。
+前者比后者更快？？？
