--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -1,4 +1,4 @@
-前面我们主要分析了实例初始化阶段如何将数据映射到DOM，现在我们来探究当数据发生变化时如何通知更新到页面重新渲染的，这也是Vue的响应式特性的表现。
+前面我们主要分析了实例初始化、如何生成vnode以及将vnode映射到DOM，现在我们来探究当数据发生变化时如何通知更新到页面重新渲染的，这正是Vue的非常重要的响应式特性。
 
 ### 1. Object.defineProperty
 Vue.js实现响应式的核心利用了ES 5的`Object.defineProperty`，这个方法可以在对象上定义或修改属性：
@@ -8,14 +8,14 @@ Object.defineProperty(obj, property, descriptor)
 
 这里比较重要的概念是`descriptor`，这是一个**属性描述符**。`descriptor`描述符有两类——数据描述符和存取描述符，具体参考[MDN文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/defineProperty)。
 
-对于`Vue`的响应式实现，我们需要关注的是存取描述符：`get`和`set`：
-- `get`指的是属性的`getter`函数，当访问数据的属性时会读属性的`getter`方法的返回值
-- `set`指的是属性的`setter`函数，当对数据的属性进行写操作时会触发属性的`setter`方法
+对于Vue的响应式实现，我们需要关注的是存取描述符：`get`和`set`：
+- `get`指的是属性的`getter`函数，当访问数据的某个属性时会通过调用该属性的`getter`方法获得其返回值
+- `set`指的是属性的`setter`函数，当对数据的某个属性进行写操作时会触发该属性的`setter`方法
 
 当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象，接下来我们来看一看Vue中哪些东西是响应式的。
 
 ### 2. initState
-在Vue实例的初始化阶段，`_init(options)`方法执行时，有一个`initState(vm)`的操作：
+在Vue实例的初始化（`_init`）阶段，在合并完options之后，有一个`initState(vm)`的步骤：
 ```js
 function initState (vm) {
   vm._watchers = []
@@ -34,12 +34,16 @@ function initState (vm) {
 }
 ```
 
+这里主要是对实例的`props`、`data`、`methods`、`data`、`computed`和`watch`做了初始化操作，下面具体来看一下这几个属性的初始化工作。
+
 先来看`initProps`：
 ```js
 function initProps (vm, propsOptions ) {
   const propsData = vm.$options.propsData || {}
+  // 在实例上创建_props
   const props = vm._props = {}
   const keys = vm.$options._propKeys = []
+  // 
   const isRoot = !vm.$parent
   if (!isRoot) {
     toggleObserving(false)
@@ -84,7 +88,7 @@ function initData (vm) {
 - 通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
 - 通过`observe`将`data`变成响应式的
 
-总之这里可以看到，`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`observe`和`defineReactive`，以及访问代理`proxy`，随后会分析它们。
+总之这里可以看到，`props`和`data`在实例的初始化过程中都被处理为了响应式对象，下面来看实现它们的`observe`和`defineReactive`，以及访问代理`proxy`。
 
 ### 3. proxy
 先来看代理：
@@ -126,7 +130,7 @@ function observe (value, asRootData) {
     Object.isExtensible(value) &&
     !value._isVue
   ) {
-    // 被监测的数据必须是数组或原生对象，实例对象上通过_isVue标记避免被监测
+    // 被监测的数据必须是数组或原生对象，实例对象上本身通过标记_isVue，避免被监测
     ob = new Observer(value)
   }
   if (asRootData && ob) {
@@ -180,7 +184,7 @@ class Observer {
 - 将`observer`实例本身添加到了被监测的数据的`__ob__`属性上
 - 根据观测数据的类型调用`observeArray`/`walk`
 
-对于数组的处理，`observeArray`又递归调用了`observe`方法；而`walk`则遍历原始对象的`key`调用`defineReactive`。看来，一切又指向了`defineReactive`。
+对于数组的处理，`observeArray`又递归调用了`observe`方法；而`walk`则遍历原始对象的`key`调用`defineReactive`。现在，一切又指向了`defineReactive`。
 
 ### 5. defineReactive
 ```js
