--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -52,8 +52,11 @@ function initMixin (Vue) {
 
     // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发阶段提供良好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
     // 生产环境中，vm._renderProxy指向实例本身
-    if (process.env.NODE_ENV !== 'production') initProxy(vm)
-    else vm._renderProxy = vm
+    if (process.env.NODE_ENV !== 'production') {
+      initProxy(vm)
+    } else {
+      vm._renderProxy = vm
+    }
   
     vm._self = vm
 
