Vue: 响应式 依赖收集即派发

--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -16,6 +16,9 @@ Object.defineProperty(obj, property, descriptor)
 
 ### 2. initState
 在Vue实例的初始化（`_init`）阶段，在合并完options之后，有一个`initState(vm)`的步骤：
+
+![Vue.prototype._init](https://img.imgdb.cn/item/604f737f5aedab222cc1c91f.jpg)
+
 ```js
 function initState (vm) {
   vm._watchers = []
@@ -34,7 +37,7 @@ function initState (vm) {
 }
 ```
 
-这里主要是对实例的`props`、`data`、`methods`、`data`、`computed`和`watch`做了初始化操作，下面具体来看一下这几个属性的初始化工作。
+`initState`主要是对实例的`props`、`data`、`methods`、`data`、`computed`和`watch`做了初始化操作，下面具体来看一下这几个属性的初始化工作。
 
 先来看`initProps`：
 ```js
@@ -43,7 +46,6 @@ function initProps (vm, propsOptions ) {
   // 在实例上创建_props
   const props = vm._props = {}
   const keys = vm.$options._propKeys = []
-  // 
   const isRoot = !vm.$parent
   if (!isRoot) {
     toggleObserving(false)
@@ -60,9 +62,9 @@ function initProps (vm, propsOptions ) {
 }
 ```
 
-这里遍历`props`主要做了两件事情：
-- 一个是通过`defineReactive`将`props`中的每个值变成响应式的
-- 另一个是通过`proxy`将`vm._props.**`的访问代理到`vm.**`上
+遍历`props`：
+- 通过`defineReactive`将`props`中的每个值变成响应式的
+- 通过`proxy`将`vm._props.**`的访问代理到`vm.**`上
 
 再看`initData`：
 ```js
@@ -84,11 +86,11 @@ function initData (vm) {
 }
 ```
 
-`initData`遍历`data`做了两件事情：
-- 通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
+流程相似：
+- 遍历`data`，通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
 - 通过`observe`将`data`变成响应式的
 
-总之这里可以看到，`props`和`data`在实例的初始化过程中都被处理为了响应式对象，下面来看实现它们的`observe`和`defineReactive`，以及访问代理`proxy`。
+总之这里可以看到，`props`和`data`被处理为了响应式的，这一步发生在触发`beforeCreate`钩子之后，触发`created`钩子之前。下面来看实现它们的`observe`和`defineReactive`，以及访问代理`proxy`。
 
 ### 3. proxy
 先来看代理：
@@ -140,9 +142,9 @@ function observe (value, asRootData) {
 }
 ```
 
-`observe`针对需要监测的数据在其`__ob__`属性上维护一个`Observer`实例，可以看到`Vnode`类型变量、Vue实例、非数组或原生对象等类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
+`observe`针对需要监测的数据在其`__ob__`上维护一个`Observer`实例（比如对于`vm.data`就有`vm.data.__ob__`），可以看到`Vnode`类型变量、Vue实例、非数组或原生对象等类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
 
-而`Observer`是一个类，它的作用是通过给对象的属性添加`getter`和`setter`来依赖收集和派发更新，`observe`监测`data`正是通过`Observer`实现的：
+而`Observer`是一个类，它的作用正是通过给对象的属性添加`getter`和`setter`来依赖收集和派发更新，`data`的响应式正是通过`Observer`实现的——`new Observer(data)`：
 ```js
 class Observer {
   constructor (value) {
@@ -151,14 +153,11 @@ class Observer {
     this.vmCount = 0
     def(value, '__ob__', this)
     if (Array.isArray(value)) {
-      if (hasProto) {
-        protoAugment(value, arrayMethods)
-      } else {
-        copyAugment(value, arrayMethods, arrayKeys)
-      }
-      // 遍历数组 调用observe
+      // props可能是数组
+      // 数组遍历 + 递归
       this.observeArray(value)
     } else {
+      // 对象遍历 + 递归
       this.walk(value)
     }
   }
@@ -178,13 +177,13 @@ class Observer {
 }
 ```
 
-首先是构造函数，一个`observer`上：
-- 用`value`维持了对所被监测的数据的引用
-- 用`dep`维护了一个`Dep`实例，它的作用是收集依赖
-- 将`observer`实例本身添加到了被监测的数据的`__ob__`属性上
+一个`observer`实例上：
+- `value`维护了对所被监测的数据的引用
+- `dep`维护了一个`Dep`实例，它的作用是收集依赖
+- `observer`实例本身被添加到了被监测的数据的`__ob__`属性上
 - 根据观测数据的类型调用`observeArray`/`walk`
 
-对于数组的处理，`observeArray`又递归调用了`observe`方法；而`walk`则遍历原始对象的`key`调用`defineReactive`。现在，一切又指向了`defineReactive`。
+对于数组通过`observeArray`又遍历每一项递归调用了`observe`方法，而`walk`则遍历原始对象的`key`调用`defineReactive`。现在，一切又指向了`defineReactive`。
 
 ### 5. defineReactive
 ```js
@@ -238,9 +237,21 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-`defineReactive`对子对象递归调用`observe`方法，这样就保证了被监测的数据的所有子属性也是响应式的。
+`defineReactive`会先读需要处理为响应式对象的数据的属性描述符：
+```js
+const property = Object.getOwnPropertyDescriptor(obj, key)
+if (property && property.configurable === false) {
+  return
+}
+```
 
-然后利用`Object.defineProperty`去给`obj`的属性`key`添加`getter`和`setter`，关于`defineReactive`内创建的这个`Dep`实例，以及`getter`和` setter`的具体作用会在下一节分析。
+如果在声明组件的data是对某个数据定义了`configurable`为false可以阻止该数据被处理为响应式的。
+
+然后利用`Object.defineProperty`去给`obj[key]`添加`getter`和`setter`使得数据`obj[key]`成为响应式的。
+
+关于`defineReactive`内创建的这个`Dep`实例，以及`getter`和` setter`的具体作用会在下一节分析。
+
+如果`obj[key]`仍然是对象的话，则会递归调用`observe`，这样就保证了被监测的数据的所有属性也是响应式的。
 
 ### 总结
 Vue响应式的核心就是利用`Object.defineProperty`为数据添加了`getter`和`setter`，这样一来在我们在对数据进行读写的时候可以自动执行一些逻辑——`getter`做的事情是依赖收集，`setter`做的事情是派发更新，接下来我们会重点分析这两个过程。
