--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -1,4 +1,4 @@
-前面我们讲到`defineReactive`通过`Object.defineProperty`为被监测的数据添加`getter`：
+前面我们讲到`defineReactive`通过`Object.defineProperty`为被监测的数据添加`getter`，下面再列一遍：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
@@ -6,7 +6,6 @@ function defineReactive (obj, key, val, customSetter, shallow) {
   const property = Object.getOwnPropertyDescriptor(obj, key)
   if (property && property.configurable === false) return
 
-  // 属性本身可能由开发者定义了getter或setter
   const getter = property && property.get
   const setter = property && property.set
   if ((!getter || setter) && arguments.length === 2) {
@@ -35,14 +34,16 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-`getter`中有两个需要关注的地方：
-- 一个是实例化了一个`Dep`的实例
-- 另一个是在观测数据对象的`key`属性的`getter`中有一个`dep.depend`的操作，它是用来做依赖收集的
+这里有两个需要关注的地方：
+- `Dep`实例
+- 响应式数据`obj[key]`被访问（触发对应的`getter`），调用`dep.depend`
 
-### Dep的定义
+### 1. Dep
+`Dep`是依赖收集的核心：
 ```js
 class Dep {
   constructor () {
+    // 一个dep有一个唯一id标识
     this.id = uid++
     this.subs = []
   }
@@ -56,56 +57,44 @@ class Dep {
   notify () {}
 }
 
-Dep.target = null
-const targetStack = []
-
-function pushTarget (target) {
-  targetStack.push(target)
-  Dep.target = target
-}
-
-function popTarget () {
-  targetStack.pop()
-  Dep.target = targetStack[targetStack.length - 1]
-}
+Dep.taget = null
 ```
 
-`Dep`是通过对`Watcher`的管理实现依赖收集，所以`Dep`实例需要通过一个`subs`数组维护它所管理的`Watcher`实例。此外`Dep`类还有一个静态属性`target`，这是一个**唯一的全局**`Watcher`。
+`Dep`是通过对`Watcher`的管理实现依赖收集的，所以`Dep`实例需要通过一个`subs`数组维护它所管理的`Watcher`实例。此外`Dep`类还有一个静态属性`target`，这是一个**全局变量**。
 
-`Dep`原型上还有一些依赖收集相关的`addSub`、`removeSub`、`depend`、`notify`方法，在了解它们之前，需要先来看一看什么是`Watcher`。
+`Dep`原型上还有一些依赖收集相关的方法，`Dep`是如何结合`Watcher`实现依赖收集的？下面来看一看另一条线路上的`Watcher`。
 
-### Wather的定义
+### 2. Wather
+`Watcher`实际上在之前关于`vm.$mount`的讨论中已经出现过了，这里来看一下它的定义：
 ```js
 class Watcher {
   constructor (vm, expOrFn, cb, options, isRenderWatcher) {
+    // 一个watcher对应了一个Vue实例
     this.vm = vm
     if (isRenderWatcher) vm._watcher = this
 
+    // 一个Vue实例上除了渲染watcher可能还有computed/watch watcher
     vm._watchers.push(this)
+
     if (options) {
+      // 对于watch，deep可能为true
       this.deep = !!options.deep
+      // 开发者手动调用vm.$watch，user可能为true
       this.user = !!options.user
+      // 对于计算属性computed，lazy为true
       this.lazy = !!options.lazy
-      this.sync = !!options.sync
+      // vm.$mount创建的watcher，before为一个方法
       this.before = options.before
     } else {
       this.deep = this.user = this.lazy = this.sync = false
     }
-    this.cb = cb
-    this.id = ++uid 
-    this.active = true
-    this.dirty = this.lazy
+
     this.deps = []
     this.newDeps = []
     this.depIds = new Set()
     this.newDepIds = new Set()
-    this.expression = process.env.NODE_ENV !== 'production' ? expOrFn.toString() : ''
       
-    if (typeof expOrFn === 'function') {
-      this.getter = expOrFn
-    } else {
-      this.getter = parsePath(expOrFn)
-    }
+    this.getter = expOrFn
     this.value = this.lazy ? undefined : this.get()
   }
 
@@ -128,35 +117,37 @@ class Watcher {
 }
 ```
 
-`Watcher`的构造函数中定义了一些和`Dep`相关的属性——`deps`、`newDeps`、`depIds`、`newDepIds`。其中`deps`和`newDeps`是用来维护`Dep`实例的数组，而`depIds`和`newDepIds`是`Set`类型结构，分别存储的是`deps`和`newDeps`中`Watcher`实例的`id`。
+`Watcher`的构造函数中定义了一些和`Dep`相关的变量——`deps`、`newDeps`、`depIds`、`newDepIds`。其中`deps`和`newDeps`是用来维护`Dep`实例的数组，而`depIds`和`newDepIds`是`Set`类型，数组和`Set`分别存储的是`dep`和`dep.id`。
 
-此外，`Watcher`中还有一些和依赖收集相关的`get`、`addDep`和`cleanupDeps`方法，下面我们在分析`Watcher`和`Dep`是如何实现依赖收集的过程中认识这些方法。
+此外，`Watcher`中还有一些和依赖收集相关的`get`、`addDep`和`cleanupDeps`方法。
 
-### 依赖收集的过程
-我们知道，对数据对象的访问会触发它们的`getter`方法，问题是，这些响应式对象是什么时候被访问的呢？在分析Vue实例的`$mount`过程时曾讲过`mountComponent`方法：
+### 3. Dep与Watcher协作，收集依赖
+我们知道——对响应式数据的访问会触发它们的`getter`方法，问题是，这些响应式数据是什么时候被访问的呢？先说结论——**在创建Vue实例的vnode时**。
+
+正如前文所说，在讨论Vue实例的`$mount`依赖的`mountComponent`中出现过`Wathcer`：
 ```js
-updateComponent = () => {
-  vm._update(vm._render(), hydrating)
-}
-new Watcher(vm, updateComponent, noop, {
-  before () {
-    if (vm._isMounted) {
-      callHook(vm, 'beforeUpdate')
-    }
+function mountComponent () {
+  const updateComponent = () => {
+    vm._update(vm._render(), hydrating)
   }
-}, true)
+  
+  new Watcher(vm, updateComponent, noop, {
+    before () {
+      if (vm._isMounted) {
+        callHook(vm, 'beforeUpdate')
+      }
+    }
+  // true表明这是一个渲染watcher
+  }, true)
+}
 ```
 
-回顾`Watcher`类的构造函数可得，在初始化一个`watcher`实例时：`this.value = this.lazy ? undefined : this.get()`会执行实例的`get`方法：
+回顾`Watcher`类的构造函数可以知道，在创建一个渲染`watcher`时（`watcher.lazy = false`），`watcher.get`会得到执行：
 ```js
-// observer/watcher.js
 class Watcher {
-  constructor (vm, expOrFn) {
-    if (typeof expOrFn === 'function') {
-      this.getter = expOrFn
-    } else {
-      this.getter = parsePath(expOrFn)
-    }
+  constructor (vm, expOrFn, cb, options, isRenderWatcher) {
+    // ...
+    this.getter = expOrFn
     this.value = this.lazy ? undefined : this.get()
   }
 
@@ -167,11 +158,7 @@ class Watcher {
     try {
       value = this.getter.call(vm, vm)
     } catch (e) {
-      if (this.user) {
-        handleError(e, vm, `getter for watcher "${this.expression}"`)
-      } else {
-        throw e
-      }
+      // ...
     } finally {
       if (this.deep) {
         traverse(value)
@@ -183,7 +170,6 @@ class Watcher {
   }
 }
 
-// observer/dep.js
 Dep.target = null
 const targetStack = []
 
@@ -198,16 +184,23 @@ function popTarget () {
 }
 ```
 
-在`Watcher`实例`get`方法的执行流程中，首先是`pushTarget(this)`，这一步将当前`Watcher`实例：
-1. 赋值给`Dep.target`
-2. 推入全局变量`targetStack`数组中
+`get`方法内，`getter`对应的正是`mountComponent`中的`vm._update(vm._render(), hydrating)`，这也解释了前文提到的响应式数据的`getter`的触发时机——实例挂载时涉及了生成vnode（vm._render）的步骤，在这里访问了实例上的响应式数据，触发了对应的响应式数据的`getter`。
 
-紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，至此，前面提出的问题有了答案——实例化`watcher`时触发了响应式对象属性的`getter`。现在再回头来看`defineReactive`在响应式对象的属性上添加的`getter`：
+`watcher.get`在执行挂载逻辑之外，还有`pushTarget(watcher)`和`popTarget`的逻辑：
+- `pushTarget`将当前`watcher`推入`targetStack`，并使`Dep.target`指向当前`watcher`
+- `popTarget`将`targetStack`队尾的watcher推出，并使`Dep.target`重新指向新的队尾`watcher`
+
+所以，`Dep.target`究竟有什么用？
+
+现在回头再来看`defineReactive`在响应式数据上添加的`getter`：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
+  // 创建了一个dep
   const dep = new Dep()
 
-  val = obj[key]
+  val = val || obj[key]
+  const childOb = !shallow && observe(val)
+
   Object.defineProperty(obj, key, {
     enumerable: true,
     configurable: true,
@@ -228,13 +221,9 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-可以看到，对象属性在被处理为响应式的时候都会首先创建一个`Dep`实例，然后在属性的`getter`被触发时这个`Dep`实例的`depend()`方法得到执行，再次回到`Dep`中：
+`getter`被触发时这个`dep.depend()`得到执行：
 ```js
 class Dep {
-  constructor () {
-    this.id = uid++
-    this.subs = []
-  }
   depend () {
     if (Dep.target) {
       Dep.target.addDep(this)
@@ -243,11 +232,9 @@ class Dep {
 }
 ```
 
-刚才已经提到，初始化`watcher`时已经将`Dep.target`指向了创建的`watcher`实例，下面来看`watcher`的`addDep`：
+而此时，`watcher.get`将`Dep.target`指向了`watcher`自身，回到`Watcher`中来看`addDep`：
 ```js
 class Watcher {
-  constructor () {}
-
   addDep (dep) {
     const id = dep.id
     if (!this.newDepIds.has(id)) {
@@ -261,7 +248,7 @@ class Watcher {
 }
 ```
 
-这里在将`Dep`实例记录进`watcher`实例的`newDepIds`、`newDeps`之前，先做了一些确保`Dep`实例唯一性的逻辑判断，紧接着又调用了`dep.addSub(this)`：
+`watcher.addDep`在做了`dep`唯一性的逻辑判断后将`dep`维护进`newDeps`、`newDepIds`中，紧接着通过`dep.addSub`将当前`watcher`维护进`dep.subs`：
 ```js
 class Dep {
   constructor () {
@@ -274,7 +261,16 @@ class Dep {
 }
 ```
 
-这里将当前的`watcher`实例添加到这个响应式数据内的`dep.subs`中，为后续数据变化时通知这些`watcher`做准备。
+以上，`dep`可以看做订阅者，`watcher`看做发布者，`dep`订阅了`watcher`：
+- `dep.subs`中维护了它所订阅的`watcher`（一个响应式数据可能在多个Vue实例上访问，也可能在一个Vue实例的模板、计算属性和watch中使用
+- `wathcer.newDeps`/`watcher.newDepIds`维护了订阅自身的所有`dep`
+
+一个`wathcer`对应了一个Vue实例。
+
+回到`watcher.get`中，除了通过`value = this.getter.call(vm, vm)`触发了响应式数据的`getter`中`dep`对`wacther`的订阅、`watcher`对`dep`的收集逻辑之外，还有以下步骤：
+- `watcher.dep`可能为`true`（对于渲染`watcher`不会），需要递归触发`value`的子项
+- 当前Vue实例的响应式数据的依赖收集完成，`popTarget`将`Dep.target`指向前一个`watcher`
+- 最后`watcher.cleanupDeps`清空依赖
 
 ### 总结
-这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`watcher`去做相应的逻辑处理，这个过程叫派发更新。
+这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`dep`去做相应的视图更新的逻辑处理，这个过程叫派发更新。
