--- a/Vue源码/4.3-响应式-派发更新.md
+++ b/Vue源码/4.3-响应式-派发更新.md
@@ -3,12 +3,14 @@
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
 
+  let childOb = !shallow && observe(val)
   Object.defineProperty(obj, key, {
     enumerable: true,
     configurable: true,
-    get: function reactiveGetter () {},
     set: function reactiveSetter (newVal) {
       const value = getter ? getter.call(obj) : val
+      
+      // 新旧值作比较
       if (newVal === value || (newVal !== newVal && value !== value)) return
         
       if (setter) {
@@ -17,28 +19,24 @@ function defineReactive (obj, key, val, customSetter, shallow) {
         val = newVal
       }
 
-      // 这一步的意义是？
+      // 将新设置的值再次处理为响应式对象
       childOb = !shallow && observe(newVal)
 
-      // 通知dep管理的watcher
+      // 通知dep所订阅的watcher
       dep.notify()
     }
   })
 }
 ```
 
-这里会比较响应式数据新旧值是否相同，如果相同则不会派发更新；否则调用`dep.notify()`：
+这里会比较响应式数据新旧值是否相同，如果相同则不会派发更新；对于被重置后的响应式数据变量，需要再次处理为响应式数据。最后是通过`dep.notify()`通知他所订阅的所有发布者`watcher`，回到`Dep.notify`：
 ```js
 class Dep {
-  constructor () {
-    this.id = uid++
-    this.subs = []
-  }
+  //...
   notify () {
+    // watcher列表
     const subs = this.subs.slice()
-    if (process.env.NODE_ENV !== 'production' && !config.async) {
-      subs.sort((a, b) => a.id - b.id)
-    }
+
     for (let i = 0, l = subs.length; i < l; i++) {
       subs[i].update()
     }
@@ -46,12 +44,13 @@ class Dep {
 }
 ```
 
-前面我们已经知道，在依赖收集阶段一个实例的`watcher`已经被添加到实例下的每一个响应式数据属性的`dep`中了。`dep.notify`的逻辑就是遍历其`dep.subs`中存储的`watcher`调用对应的`update`方法：
+`dep.notify`的逻辑就是遍历其`subs`中所维护的`watcher`，调用对应的`update`：
 ```js
 class Watcher {
-  constructor (vm, expOrFn, cb, options, isRenderWatcher) {}
+  // ...
   update () {
     if (this.lazy) {
+      // 计算属性computed watcher
       this.dirty = true
     } else if (this.sync) {
       this.run()
@@ -62,10 +61,10 @@ class Watcher {
 }
 ```
 
-`update`的流程中根据`watcher`的不同状态做了不同处理，`lazy`和`sync`的逻辑会在后续分析，这里只看`queueWatcher`。
+`update`的流程中根据`watcher`的不同类型（渲染/计算属性...）做了不同处理，这里暂时只讨论渲染`watcher`的`queueWatcher`。
 
 ### queueWatcher
-要清楚的是，并不是每次数据改变都会触发`watcher`的更新操作——Vue的设计是将这些需要更新操作的`watcher`先存储在一个队列`queue`中（在这之前还需要校验，通过`has`对象保证同一个`watcher`只被添加一次），然后在`nextTick`中`flushSchedulerQueue`它们：
+要清楚的是，并不是所有响应式数据的改变触发的`watcher.update`都会被执行——Vue的设计是将这些需要更新操作的`watcher`先存储在一个队列中，然后在`nextTick`中`flushSchedulerQueue`它们：
 ```js
 let waiting = false
 let flushing = false
@@ -95,7 +94,7 @@ function queueWatcher (watcher) {
 }
 ```
 
-这样一来，如果一个`watcher`的`update`被触发了多次（这是很常见的场景，想象一个实例下的多个响应式数据被手动修改的话它们均会触发同一个`watcher.update`），`wathcher`只会被加入`queue`中一次，因为也只需要`update`即可。
+这里通过`has`对象验证`watcher.id`保证同一个`watcher`只被添加一次。这样一来，如果一个`watcher`的`update`被触发了多次（这是很常见的场景，因为一个`wathcer`对应一个Vue实例，想象一个实例下的多个响应式数据被手动修改的话它们均会触发同一个`watcher.update`），`wathcher`只会被加入`queue`中一次，因为也只需要一次`update`即可。
 
 ```js
 function flushSchedulerQueue () {
@@ -168,8 +167,7 @@ function resetSchedulerState () {
 这一步是派发更新的关键一环：
 ```js
 class Watcher {
-  constructor () {}
-
+  // ...
   run () {
     if (this.active) {
       const value = this.get()
